# lang-compiler

./: .clangd-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
doc/: .$tokenizer_finite_state_machine.drawio.bkp  language-production.md  lexer_finite_state_machine.mermaid
doc/left-recursion-problem/: prompt1.txt  response1.txt
examples/: all_tokens.lang  arithmetic_operations.lang  dynamic_typing.lang  expressions.lang  for_loop.lang  function_division.lang  hello_world.lang  something.lang
include/: define.h  exceptions.h  symbol_table.h  tokens.h
include/ast/: ast_visitor_interface.h  print_test_visitor.h
include/code_generation/: ast_visitor_interface.h  codegen_visitor.h  label_manager.h  llvm_ir_generator.h  print_test_visitor.h  visitor.h
include/lexer/: lexer.h
include/parser/: abstract_syntax_tree.h  expression.h  parser.h  pratt_parser.h  syntax_tree.h
res/: Doxyfile  gruvbox-doxygen.css  gruvbox-doxygen.css.disabled  index.md  language-grammar.md
src/: main.cpp  symbol_table.cpp  tokens.cpp
src/ast/: print_test_visitor.cpp
src/code_generation/: codegen_visitor.cpp  label_manager.cpp  print_test_visitor.cpp
src/lexer/: lexer.cpp
src/parser/: abstract_syntax_tree.cpp  expression.cpp  parser.cpp  pratt_parser.cpp  syntax_tree.cpp
test/moduletest/: lexer.cpp  lexer_test_file.lang
test/unittest/: expression.cpp  label_manager.cpp  lexer.cpp  parser.cpp  pratt_parser.cpp  symbol_table.cpp  tokens.cpp
